k8s/infra/networking/cilium/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      type: public-lb
    annotations:
      "lbipam.cilium.io/ips": "10.40.1.0" # pin the ip
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: home-wildcard-tls
    - name: mc
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
